--- a/wars/v1/build.gradle
+++ b/wars/v1/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-api")
 	compileOnly project(":modules:backend-admin-config:backend-admin-config-service")
 
+	compileOnly project(":modules:backend-communication:backend-communication-api")
+	compileOnly project(":modules:backend-communication:backend-communication-service")
+
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
 	
