[CTS] Fix bug remove applicant, index dossier with comment

--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-auth")
+	compileOnly project(":modules:backend-bundlemgt")
 
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
