--- a/modules/backend-statisticmgt/build.gradle
+++ b/modules/backend-statisticmgt/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
-	compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.3.4-ga5"
+	//compileOnly group: "com.liferay.portal", name: "release.portal.api", version: "7.3.4-ga5"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api", version: "2.1"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
