--- a/modules/backend-systemlogmgt/backend-systemlogmgt-service/src/main/resources/service.properties
+++ b/modules/backend-systemlogmgt/backend-systemlogmgt-service/src/main/resources/service.properties
@@ -12,6 +12,6 @@
 ## Build
 ##
 
-    build.namespace=SystemLog
-    build.number=1
-    build.date=1616033805394
+    build.namespace=SystemLogMgt
+    build.number=5
+    build.date=1616150583048
