--- a/modules/backend-systemlogmgt/backend-systemlogmgt-service/build.gradle
+++ b/modules/backend-systemlogmgt/backend-systemlogmgt-service/build.gradle
@@ -1,19 +1,16 @@
 dependencies {
-	compileOnly group: "com.liferay", name: "com.liferay.petra.io", version: "3.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.petra.lang", version: "3.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "3.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.portal.aop.api", version: "1.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "4.4.0"
-	compileOnly group: "org.osgi", name: "org.osgi.annotation.versioning", version: "1.1.0"
+	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bnd.annotation", version: "4.3.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.io", version: "2.0.0"
+	compileOnly group: "com.liferay", name: "com.liferay.petra.string", version: "2.1.6"
+	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender.api", version: "3.0.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "3.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.core", version: "6.0.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly project(":modules:backend-systemlogmgt:backend-systemlogmgt-api")
-	compileOnly 'biz.aQute.bnd:biz.aQute.bndlib:3.5.0'
-	compileOnly 'com.liferay:com.liferay.portal.spring.extender.api:3.0.0'
 }
 
 buildService {
 	apiDir = "../backend-systemlogmgt-api/src/main/java"
 }
 
-group = "backend.systemlogmgt"
+group = "org.opencps.backend.systemlogmgt"
