--- a/modules/backend-statisticmgt/build.gradle
+++ b/modules/backend-statisticmgt/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 	compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.0.3'
 	compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
 	
+	compile project(":modules:backend-bundlemgt")
+	//compile project(":modules:backend-exportmgt")
 	 // Use JUnit test framework
 	testCompile group: "junit", name: "junit", version: "4.12"
+	
+	
 }
