--- a/modules/backend-statistic-rest/build.gradle
+++ b/modules/backend-statistic-rest/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 	
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")	
+	
+	compileOnly project(":modules:backend-api-rest")	
+	
 }
 repositories {
     flatDir {
