Báo cáo Votting

--- a/modules/backend-statisticmgt/src/main/resources/configuration.properties
+++ b/modules/backend-statisticmgt/src/main/resources/configuration.properties
@@ -3,3 +3,4 @@ templates.reports.dir=/templates/reports
 templates.reports.filename1=statisticmgt-dossierlist.xlsx
 templates.reports.filename2=statisticmgt-dossiercount1.xlsx
 templates.reports.filename3=statisticmgt-dossiercount2.xlsx
+templates.reports.filename4=statisticmgt-votting.xlsx
