Báo cáo đánh giá cho đơn vị

--- a/modules/backend-statisticmgt/build.gradle
+++ b/modules/backend-statisticmgt/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 	compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.0.3'
 	compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.0.3'
 	compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
-	
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
 	compile project(":modules:backend-bundlemgt")
 	//compile project(":modules:backend-exportmgt")
 	 // Use JUnit test framework
