--- a/modules/backend-statisticmgt/build.gradle
+++ b/modules/backend-statisticmgt/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 	compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.0.3'
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
 	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+	compileOnly project(":modules:backend-statistic-service:backend-statistic-service-api")
+	compileOnly project(":modules:backend-auth")
+	
 	compile project(":modules:backend-bundlemgt")
 	//compile project(":modules:backend-exportmgt")
 	 // Use JUnit test framework
