Login/ Logout OpenCPS SSO KeyCLoak

--- a/modules/backend-communication/backend-communication-service/build.gradle
+++ b/modules/backend-communication/backend-communication-service/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: 'com.liferay', name: 'com.liferay.portal.security.sso.openid.connect.api', version: '4.0.2'
 	compileOnly group: 'com.liferay', name: 'com.liferay.portal.security.sso.openid.connect.impl', version: '3.0.5'
+	compileOnly group: "com.liferay", name: "com.liferay.portal.security.sso.cas.api", version: "3.0.0"
 	compileOnly group: 'com.nimbusds', name: 'oauth2-oidc-sdk', version: '5.63'
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 	
