API: Nhận thông báo thuế, Nhận Chứng từ thuế Ghi log cho hồ sơ, thực hiện thêm bản ghi vào thuế, next bước, cập nhật bảng thuế khi thanh toán qua Nhận thông báo chứng từ thuế

--- a/modules/backend-synctracking/backend-synctracking-service/src/main/resources/service.properties
+++ b/modules/backend-synctracking/backend-synctracking-service/src/main/resources/service.properties
@@ -12,6 +12,6 @@
 ## Build
 ##
 
-    build.namespace=FOO
-    build.number=2
-    build.date=1623140841851
+    build.namespace=syncTracking
+    build.number=8
+    build.date=1623389208125
