--- a/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
+++ b/modules/backend-dossiermgt/backend-dossiermgt-service/build.gradle
@@ -35,8 +35,8 @@ dependencies {
 
 //	compileOnly project(":modules:sync-tracking:sync-tracking-api")
 //	compileOnly project(":modules:sync-tracking:sync-tracking-service")
-	compileOnly project(":modules:backend-synctracking:backend-synctracking-api")
-	compileOnly project(":modules:backend-synctracking:backend-synctracking-service")
+//	compileOnly project(":modules:backend-synctracking:backend-synctracking-api")
+//	compileOnly project(":modules:backend-synctracking:backend-synctracking-service")
 	
 //	compileOnly project(":modules:sync-reportland:sync-reportland-api")
 //	compileOnly project(":modules:sync-reportland:sync-reportland-service")
