--- a/modules/backend-zalo-hook/build.gradle
+++ b/modules/backend-zalo-hook/build.gradle
@@ -14,15 +14,28 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
 	compileOnly group: "org.osgi", name: "org.osgi.service.log", version: "1.4.0"
 	compileOnly group: 'com.liferay', name: 'com.liferay.petra.string', version: '2.0.1'
-	
+
+
+
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-api")
+	compileOnly project(":modules:backend-usermgt:backend-usermgt-service")
+
+
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-service")
 	compileOnly project(":modules:backend-dossiermgt:backend-dossiermgt-api")
+	compileOnly 'org.osgi:org.osgi.service.jaxrs:1.0.0'
 	
 	compile name : "VNPostNGSPSDK", transitive:false
 	compile name : "gson-2.8.0", transitive:false
+
+	compile 'org.apache.httpcomponents:httpcore:4.4.3'
+	compile 'org.apache.httpcomponents:httpmime:4.5.1'
+
+
+
 }
 
 repositories {
