--- a/wars/v1/build.gradle
+++ b/wars/v1/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 	compileOnly project(":modules:backend-communication:backend-communication-api")
 	compileOnly project(":modules:backend-communication:backend-communication-service")
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.1.4'
+	compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
 
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-api")
 	//compileOnly project(":modules:backend-deliverable:backend-deliverable-service")
